# Scraping-for-OpenEmbedded

./: README.md  pyproject.toml  requirments.txt  run.sh
openEmbedded/: main.py  openEmbedded.py  parse.py
tests/: autossh.html  ssh.html  testparse.py
